Adjusted train and main

--- a/train.ipynb
+++ b/train.ipynb
@@ -34,9 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(csv_path):\n",
+    "def train(csv_path='2023-01-27_17_10_influxdb_data.csv'):\n",
     "    try:\n",
-    "        data = pd.read_csv('2023-01-27_17_10_influxdb_data.csv')\n",
+    "        data = pd.read_csv(csv_path)\n",
     "        filtered_data = data.drop([\"result\", \"table\", \"_start\", \"_stop\", \"_measurement\", \"key\", \"Unnamed: 0\"], axis=1)\n",
     "        filtered_data[\"_field\"].value_counts()\n",
     "        # parse keys into seperate dataframes\n",
@@ -108,9 +108,7 @@
      ]
     }
    ],
-   "source": [
-    "train('2023-01-27_17_10_influxdb_data.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -137,12 +135,17 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "v_": [
    "dGlsbHRyaXMyMA==",
    "dGlsbHRyaXMyMA=="
-  ]
+  ],
+  "vscode": {
+   "interpreter": {
+    "hash": "b8c929f1c7b5a7b7d05dbe3bcbfebf7850db0ed0607b815f99d0534cfe000cb7"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
